--- a/index.html
+++ b/index.html
@@ -224,7 +224,7 @@
 				<!-- Sekretaris, Wakil, Bendahara -->
 				<div class="grid grid-cols-2 md:grid-cols-4 gap-8 mb-12 justify-center">
 					<div class="flex flex-col items-center">
-						<img src="img/sek1.webp" loading="lazy" class="w-20 h-20 rounded-full object-cover mb-2 border-2 border-gray-300" />
+						<img src="foto/WhatsApp Image 2025-08-03 at 07.13.23.webp" loading="lazy" class="w-20 h-20 rounded-full object-cover mb-2 border-2 border-gray-300" />
 						<h3 class="font-semibold text-sm">Nabila Febrianti</h3>
 						<p class="text-gray-500 text-sm">Sekretaris 1</p>
 					</div>
@@ -239,7 +239,7 @@
 						<p class="text-gray-500 text-sm">Wakil Ketua</p>
 					</div>
 					<div class="flex flex-col items-center">
-						<img src="img/bendahara.webp" loading="lazy" class="w-20 h-20 rounded-full object-cover mb-2 border-2 border-gray-300" />
+						<img src="foto/WhatsApp Image 2025-08-02 at 17.31.29.webp" loading="lazy" class="w-20 h-20 rounded-full object-cover mb-2 border-2 border-gray-300" />
 						<h3 class="font-semibold text-sm">Liana</h3>
 						<p class="text-gray-500 text-sm">Bendahara</p>
 					</div>
@@ -248,12 +248,12 @@
 				<!-- Anggota -->
 				<div class="grid grid-cols-2 sm:grid-cols-3 md:grid-cols-4 lg:grid-cols-6 gap-6">
 					<div class="flex flex-col items-center">
-						<img src="img/anggota1.webp" loading="lazy" class="w-20 h-20 rounded-full object-cover mb-2 border" />
-						<h3 class="text-sm font-medium">Nisa Pra Utami</h3>
+						<img src="foto/WhatsApp Image 2025-08-03 at 07.05.17.webp" loading="lazy" class="w-20 h-20 rounded-full object-cover mb-2 border" />
+						<h3 class="text-sm font-medium">Andika Prasetyo</h3>
 					</div>
 					<div class="flex flex-col items-center">
-						<img src="img/anggota2.webp" loading="lazy" class="w-20 h-20 rounded-full object-cover mb-2 border" />
-						<h3 class="text-sm font-medium">Ripal Algifari</h3>
+						<img src="foto/WhatsApp Image 2025-08-03 at 08.45.4100.webp" loading="lazy" class="w-20 h-20 rounded-full object-cover mb-2 border" />
+						<h3 class="text-sm font-medium">Rabiatul Adawiyah</h3>
 					</div>
 					<div class="flex flex-col items-center">
 						<img src="foto/WhatsApp Image 2025-08-01 at 20.25.15.webp" loading="lazy" class="w-20 h-20 rounded-full object-cover mb-2 border" />
@@ -262,10 +262,6 @@
 					<div class="flex flex-col items-center">
 						<img src="foto/WhatsApp Image 2025-08-01 at 20.25.1500.webp" loading="lazy" class="w-20 h-20 rounded-full object-cover mb-2 border" />
 						<h3 class="text-sm font-medium">Hesti Martianda</h3>
-					</div>
-					<div class="flex flex-col items-center">
-						<img src="foto/WhatsApp Image 2025-08-02 at 17.31.29.webp" loading="lazy" class="w-20 h-20 rounded-full object-cover mb-2 border" />
-						<h3 class="text-sm font-medium">Liana</h3>
 					</div>
 					<!-- Tambah anggota lain sesuai kebutuhan -->
 				</div>
@@ -276,6 +272,7 @@
 			<div class="container mx-auto">
 				<h2 class="text-4xl font-bold text-center mb-12 text-primary">Anggota Kelas</h2>
 				<div class="grid grid-cols-2 sm:grid-cols-2 md:grid-cols-2 lg:grid-cols-5 gap-6">
+					<!-- Anggota 1 -->
 					<div
 						class="group transition-transform hover:-translate-y-2 cursor-pointer"
 						onclick="openModal(
@@ -296,9 +293,9 @@
 						</div>
 						<div class="mt-4 text-center">
 							<h3 class="font-semibold text-lg">Ahmad Rizki</h3>
-							<p class="text-gray-600">Ketua Kelas</p>
 						</div>
 					</div>
+					<!-- Anggota 2 -->
 					<div
 						class="group transition-transform hover:-translate-y-2 cursor-pointer"
 						onclick="openModal(
@@ -319,9 +316,9 @@
 						</div>
 						<div class="mt-4 text-center">
 							<h3 class="font-semibold text-lg">Siti Nurhaliza</h3>
-							<p class="text-gray-600">Wakil Ketua</p>
 						</div>
 					</div>
+					<!-- Anggota 3 -->
 					<div
 						class="group transition-transform hover:-translate-y-2 cursor-pointer"
 						onclick="openModal(
@@ -342,9 +339,9 @@
 						</div>
 						<div class="mt-4 text-center">
 							<h3 class="font-semibold text-lg">Budi Santoso</h3>
-							<p class="text-gray-600">Sekretaris</p>
 						</div>
 					</div>
+					<!-- Anggota 4 -->
 					<div
 						class="group transition-transform hover:-translate-y-2 cursor-pointer"
 						onclick="openModal(
@@ -365,32 +362,27 @@
 						</div>
 						<div class="mt-4 text-center">
 							<h3 class="font-semibold text-lg">Dewi Lestari</h3>
-							<p class="text-gray-600">Bendahara</p>
 						</div>
 					</div>
+					<!-- Anggota 5 -->
 					<div
 						class="group transition-transform hover:-translate-y-2 cursor-pointer"
 						onclick="openModal(
-					'Ahmad Rizki',
-					'Ketua kelas Teknik Komputer A yang aktif dan bertanggung jawab.',
-					'https:https://www.instagram.com/ridho_firmansyah19/',
+					'Andika Prasetyo',
+					'Hello bro nama gw Andika Prasetyo, ganteng bet sih gw, tapi gitu lah cowok sering keluar malem minum gitulah bree hehe.......',
+					'https://www.instagram.com/andika_pras22?utm_source=ig_web_button_share_sheet&igsh=NncxdWE1c3d3eGhl',
 					'https://link-ke-linkedin.com',
-					'https://readdy.ai/api/search-image?query=professional%20headshot%20of%20a%20young%20asian%20student%20wearing%20casual%20attire%2C%20natural%20lighting%2C%20clean%20background%2C%20high%20quality%2C%20photorealistic&width=400&height=400&seq=1&orientation=squarish'
+					'foto/WhatsApp Image 2025-08-03 at 00.27.31 copy.webp'
 					)"
 					>
 						<div class="aspect-square rounded-xl overflow-hidden shadow-lg hover:shadow-xl transition-all">
-							<img
-								src="https://readdy.ai/api/search-image?query=professional%20headshot%20of%20a%20young%20asian%20male%20student%20wearing%20casual%20attire%2C%20natural%20lighting%2C%20clean%20background%2C%20high%20quality%2C%20photorealistic&width=400&height=400&seq=5&orientation=squarish"
-								loading="lazy"
-								alt="Anggota 5"
-								class="w-full h-full object-cover"
-							/>
+							<img src="foto/WhatsApp Image 2025-08-03 at 00.27.31.webp" loading="lazy" alt="Anggota 5" class="w-full h-full object-cover" />
 						</div>
 						<div class="mt-4 text-center">
-							<h3 class="font-semibold text-lg">Raden Wijaya</h3>
-							<p class="text-gray-600">Anggota</p>
+							<h3 class="font-semibold text-lg">Andika Prasetyo</h3>
 						</div>
 					</div>
+					<!-- Anggota 6 -->
 					<div
 						class="group transition-transform hover:-translate-y-2 cursor-pointer"
 						onclick="openModal(
@@ -406,9 +398,9 @@
 						</div>
 						<div class="mt-4 text-center">
 							<h3 class="font-semibold text-lg">Ridho Firmansyah</h3>
-							<p class="text-gray-600">Anggota</p>
 						</div>
 					</div>
+					<!-- Anggota 7 -->
 					<div
 						class="group transition-transform hover:-translate-y-2 cursor-pointer"
 						onclick="openModal(
@@ -424,9 +416,9 @@
 						</div>
 						<div class="mt-4 text-center">
 							<h3 class="font-semibold text-lg">Hesti Martianda</h3>
-							<p class="text-gray-600">Anggota</p>
 						</div>
 					</div>
+					<!-- Anggota 8 -->
 					<div
 						class="group transition-transform hover:-translate-y-2 cursor-pointer"
 						onclick="openModal(
@@ -442,7 +434,42 @@
 						</div>
 						<div class="mt-4 text-center">
 							<h3 class="font-semibold text-lg">Liana</h3>
-							<p class="text-gray-600">Anggota</p>
+						</div>
+					</div>
+					<!-- Anggota 9 -->
+					<div
+						class="group transition-transform hover:-translate-y-2 cursor-pointer"
+						onclick="openModal(
+					'Nabila Febriyanti',
+					'Halo nama aku Nabila Febriyanti, aku cantik tapi aku juga rada sengklek juga hehe......',
+					'https://www.instagram.com/nabyla_.f?utm_source=ig_web_button_share_sheet&igsh=MTU5dXphczV2Njd1NA==',
+					'https://link-ke-linkedin.com',
+					'foto/WhatsApp Image 2025-08-03 at 07.13.24 copy.webp'
+					)"
+					>
+						<div class="aspect-square rounded-xl overflow-hidden shadow-lg hover:shadow-xl transition-all">
+							<img src="foto/WhatsApp Image 2025-08-03 at 07.13.24.webp" loading="lazy" alt="Anggota 8" class="w-full h-full object-cover" />
+						</div>
+						<div class="mt-4 text-center">
+							<h3 class="font-semibold text-lg">Nabila Febriyanti</h3>
+						</div>
+					</div>
+					<!-- Anggota 10 -->
+					<div
+						class="group transition-transform hover:-translate-y-2 cursor-pointer"
+						onclick="openModal(
+					'Rabiatul Adawiyah',
+					'Halo nama aku Rabiatul Adawiyah, aku adalah anggota dari kelas ini, kadang aku kesurupan dak keruan ya gitulah hidup......',
+					'https://www.instagram.com/nabyla_.f?utm_source=ig_web_button_share_sheet&igsh=MTU5dXphczV2Njd1NA==',
+					'https://link-ke-linkedin.com',
+					'foto/WhatsApp Image 2025-08-03 at 08.25.21 copy.webp'
+					)"
+					>
+						<div class="aspect-square rounded-xl overflow-hidden shadow-lg hover:shadow-xl transition-all">
+							<img src="foto/WhatsApp Image 2025-08-03 at 08.25.21.webp" loading="lazy" alt="Anggota 8" class="w-full h-full object-cover" />
+						</div>
+						<div class="mt-4 text-center">
+							<h3 class="font-semibold text-lg">Rabiatul Adawiyah</h3>
 						</div>
 					</div>
 				</div>
