--- a/index.html
+++ b/index.html
@@ -263,6 +263,10 @@
 						<img src="foto/WhatsApp Image 2025-08-01 at 20.25.1500.webp" loading="lazy" class="w-20 h-20 rounded-full object-cover mb-2 border" />
 						<h3 class="text-sm font-medium">Hesti Martianda</h3>
 					</div>
+					<div class="flex flex-col items-center">
+						<img src="foto/WhatsApp Image 2025-08-03 at 09.09.15.webp" loading="lazy" class="w-20 h-20 rounded-full object-cover mb-2 border" />
+						<h3 class="text-sm font-medium">Baiq Ersa Julianti</h3>
+					</div>
 					<!-- Tambah anggota lain sesuai kebutuhan -->
 				</div>
 			</div>
@@ -369,7 +373,7 @@
 						class="group transition-transform hover:-translate-y-2 cursor-pointer"
 						onclick="openModal(
 					'Andika Prasetyo',
-					'Hello bro nama gw Andika Prasetyo, ganteng bet sih gw, tapi gitu lah cowok sering keluar malem minum gitulah bree hehe.......',
+					'Haii, nama saya Andika Prasetiyo, Seorang yang sedang menekuni bidang analisis data dengan minat kuat dalam mengubah data menjadi insight bernilai. Memiliki pemahaman dalam pengembangan front-end dan dasar-dasar IoT, saya percaya kolaborasi antara data dan teknologi dapat menciptakan solusi inovatif. Selalu terbuka untuk belajar dan berdiskusi seputar data, front-end, maupun IoT.<br><br> ~Data bukan sekadar angka, ia adalah cerita yang menunggu untuk diungkap.~',
 					'https://www.instagram.com/andika_pras22?utm_source=ig_web_button_share_sheet&igsh=NncxdWE1c3d3eGhl',
 					'https://link-ke-linkedin.com',
 					'foto/WhatsApp Image 2025-08-03 at 00.27.31 copy.webp'
@@ -405,7 +409,7 @@
 						class="group transition-transform hover:-translate-y-2 cursor-pointer"
 						onclick="openModal(
 					'Hesti Martianda',
-					'Halo aku adalah Hesti Martianda, aku adalah orang gila, tidak pernah mandi hehe....',
+					'Perkenalkan nama saya Hesti martianda dari anak amak supendi dan inak nurjannah, saya berasal dari sembalun dan sekarang saya sedang menjadi mahasiswa di salah satu kampus kedua terbaik yaitu universitas hamzanwadi.',
 					'https://www.instagram.com/hestimartianda?utm_source=ig_web_button_share_sheet&igsh=MTdud252cDNpOGQyZA==',
 					'https://link-ke-linkedin.com',
 					'foto/WhatsApp Image 2025-08-02 at 17.22.28 copy.webp'
@@ -459,8 +463,8 @@
 						class="group transition-transform hover:-translate-y-2 cursor-pointer"
 						onclick="openModal(
 					'Rabiatul Adawiyah',
-					'Halo nama aku Rabiatul Adawiyah, aku adalah anggota dari kelas ini, kadang aku kesurupan dak keruan ya gitulah hidup......',
-					'https://www.instagram.com/nabyla_.f?utm_source=ig_web_button_share_sheet&igsh=MTU5dXphczV2Njd1NA==',
+					'Hallo perkenalkan aku Abik anggota dari kelas TK-A,aku itu orang nya selalu humoris suka bikin orang ketawa,aku juga sering telat masuk kelas padahal rumah ku dari kampus jaraknya dekat,semoga aku bisa lulus tepat waktu...Sekian suka dukanya Untuk teman-teman TK-A.',
+					'https://www.instagram.com/abikk__27?igsh=dW1mMGRxbjlobmNv',
 					'https://link-ke-linkedin.com',
 					'foto/WhatsApp Image 2025-08-03 at 08.25.21 copy.webp'
 					)"
@@ -470,6 +474,42 @@
 						</div>
 						<div class="mt-4 text-center">
 							<h3 class="font-semibold text-lg">Rabiatul Adawiyah</h3>
+						</div>
+					</div>
+					<!-- Anggota 11 -->
+					<div
+						class="group transition-transform hover:-translate-y-2 cursor-pointer"
+						onclick="openModal(
+					'Baiq Ersa Julianti',
+					'Halo nama aku Baiq Ersa Julianti, sering dipanggil eca, hobiku biasanya main debus, dan juga suka banget nyemilin beling. Yahhh gitulah tes ilmu',
+					'https://www.instagram.com/__baiqeca/?utm_source=ig_web_button_share_sheet',
+					'https://link-ke-linkedin.com',
+					'foto/WhatsApp Image 2025-08-03 at 09.07.22.webp'
+					)"
+					>
+						<div class="aspect-square rounded-xl overflow-hidden shadow-lg hover:shadow-xl transition-all">
+							<img src="foto/WhatsApp Image 2025-08-03 at 09.07.22.webp" loading="lazy" alt="Anggota 8" class="w-full h-full object-cover" />
+						</div>
+						<div class="mt-4 text-center">
+							<h3 class="font-semibold text-lg">Baiq Ersa Julianti</h3>
+						</div>
+					</div>
+					<!-- Anggota 12 -->
+					<div
+						class="group transition-transform hover:-translate-y-2 cursor-pointer"
+						onclick="openModal(
+					'Siti Ardianti Rukmana',
+					'Halo nama akau Siti Ardianti Rukmana, aku adalah seorang yang sangat suka joget dan sering jadi jangger, aku juga seorang seleb dari kampus dan desaku hehe.....',
+					'https://www.instagram.com/ardiantii___?utm_source=ig_web_button_share_sheet&igsh=cXhwcjI0YjNzMGc0',
+					'https://link-ke-linkedin.com',
+					'foto/WhatsApp Image 2025-08-03 at 09.15.38 (1).webp'
+					)"
+					>
+						<div class="aspect-square rounded-xl overflow-hidden shadow-lg hover:shadow-xl transition-all">
+							<img src="foto/WhatsApp Image 2025-08-03 at 09.15.38.webp" loading="lazy" alt="Anggota 8" class="w-full h-full object-cover" />
+						</div>
+						<div class="mt-4 text-center">
+							<h3 class="font-semibold text-lg">Siti Ardianti Rukmana</h3>
 						</div>
 					</div>
 				</div>
