--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
 		<link href="https://fonts.googleapis.com/css2?family=Pacifico&family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet" />
 		<link href="https://cdnjs.cloudflare.com/ajax/libs/remixicon/4.6.0/remixicon.min.css" rel="stylesheet" />
 		<link rel="shortcut icon" href="img/380938694_1318676755440881_1850078113817887475_n.png" type="image/x-icon" />
+		<link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
+
 		<link rel="stylesheet" href="style.css" />
 	</head>
 	<body class="font-['Inter']">
@@ -49,8 +51,8 @@
 			<div class="hero-gradient relative inset-0 pt-16">
 				<div class="container mx-auto px-4 h-screen flex flex-col justify-center items-center text-white relative z-10">
 					<h1 class="text-6xl font-bold mb-2 text-center">Teknik Komputer A</h1>
-					<h2 class="text-3xl font-bold mb-6 text-center">Angkatan 2022</h2>
-					<p class="text-xl mb-8 text-center max-w-2xl">Bersama Kita Belajar, Bersama Kita Tumbuh. Mari bergabung dalam perjalanan pembelajaran yang penuh inspirasi di Teknik Komputer A.</p>
+					<h2 class="text-3xl font-bold mb-6 text-center" data-aos="fade-up" data-aos-delay="400">Angkatan 2022</h2>
+					<p class="text-xl mb-8 text-center max-w-2xl" data-aos="fade-up" data-aos-delay="400">Bersama Kita Belajar, Bersama Kita Tumbuh. Mari bergabung dalam perjalanan pembelajaran yang penuh inspirasi di Teknik Komputer A.</p>
 					<button onclick="document.getElementById('tentang').scrollIntoView({behavior: 'smooth'})" class="bg-white text-black px-8 py-3 rounded-button font-semibold hover:bg-opacity-90 transition-all flex items-center gap-2">
 						<svg class="w-5 h-5" fill="none" stroke="currentColor" stroke-width="2" viewBox="0 0 24 24">
 							<path stroke-linecap="round" stroke-linejoin="round" d="M13 17h8m0 0V9m0 8l-8-8-4 4-6-6"></path>
@@ -63,14 +65,14 @@
 		<!-- Tentang Kelas -->
 		<section id="tentang" class="py-20 bg-gray-50 relative">
 			<div class="max-w-6xl mx-auto px-4">
-				<h2 class="text-4xl font-bold text-center text-primary mb-16">Tentang Kelas</h2>
+				<h2 class="text-4xl font-bold text-center text-primary mb-16" data-aos="fade-up" data-aos-delay="400">Tentang Kelas</h2>
 
 				<div class="relative">
 					<!-- Garis Timeline -->
 					<div class="absolute left-4 md:left-1/2 transform md:-translate-x-1/2 h-full border-l-4 border-primary"></div>
 
 					<!-- ITEM SEMESTER 1 -->
-					<div class="mb-20 flex flex-col md:flex-row items-center md:justify-between relative">
+					<div class="mb-20 flex flex-col md:flex-row items-center md:justify-between relative" data-aos="fade-up" data-aos-delay="200">
 						<!-- Konten (mobile kanan, desktop kiri) -->
 						<div class="md:w-5/12 md:text-right order-2 md:order-1 ml-10 md:ml-0">
 							<h3 class="text-xl font-bold mb-2 text-primary">Semester 1</h3>
@@ -89,7 +91,7 @@
 					</div>
 
 					<!-- SEMESTER 2 -->
-					<div class="mb-20 flex flex-col md:flex-row items-center md:justify-between relative">
+					<div class="mb-20 flex flex-col md:flex-row items-center md:justify-between relative" data-aos="fade-up" data-aos-delay="400">
 						<!-- Gambar (mobile atas, desktop kiri) -->
 						<div class="md:w-5/12 order-2 md:order-1">
 							<img src="img/2.webp" loading="lazy" alt="2023" class="rounded-xl shadow-lg transform rotate-2 w-full max-w-sm mx-auto" />
@@ -105,7 +107,7 @@
 						</div>
 					</div>
 					<!-- ITEM SEMESTER 3 -->
-					<div class="mb-20 flex flex-col md:flex-row items-center md:justify-between relative">
+					<div class="mb-20 flex flex-col md:flex-row items-center md:justify-between relative" data-aos="fade-up" data-aos-delay="400">
 						<!-- Konten (mobile kanan, desktop kiri) -->
 						<div class="md:w-5/12 md:text-right order-2 md:order-1 ml-10 md:ml-0">
 							<h3 class="text-xl font-bold mb-2 text-primary">Semester 3</h3>
@@ -124,7 +126,7 @@
 						</div>
 					</div>
 					<!-- SEMESTER 4 -->
-					<div class="mb-20 flex flex-col md:flex-row items-center md:justify-between relative">
+					<div class="mb-20 flex flex-col md:flex-row items-center md:justify-between relative" data-aos="fade-up" data-aos-delay="400">
 						<!-- Gambar (mobile atas, desktop kiri) -->
 						<div class="md:w-5/12 order-2 md:order-1">
 							<img src="img/IMG_1179.webp" loading="lazy" alt="2023" class="rounded-xl shadow-lg transform rotate-2 w-full max-w-sm mx-auto" />
@@ -143,7 +145,7 @@
 						</div>
 					</div>
 					<!-- ITEM SEMESTER 5 -->
-					<div class="mb-20 flex flex-col md:flex-row items-center md:justify-between relative">
+					<div class="mb-20 flex flex-col md:flex-row items-center md:justify-between relative" data-aos="fade-up" data-aos-delay="400">
 						<!-- Konten (mobile kanan, desktop kiri) -->
 						<div class="md:w-5/12 md:text-right order-2 md:order-1 ml-10 md:ml-0">
 							<h3 class="text-xl font-bold mb-2 text-primary">Semester 5</h3>
@@ -162,7 +164,7 @@
 						</div>
 					</div>
 					<!-- SEMESTER 6 -->
-					<div class="mb-20 flex flex-col md:flex-row items-center md:justify-between relative">
+					<div class="mb-20 flex flex-col md:flex-row items-center md:justify-between relative" data-aos="fade-up" data-aos-delay="400">
 						<!-- Gambar (mobile atas, desktop kiri) -->
 						<div class="md:w-5/12 order-2 md:order-1">
 							<img src="img/WhatsApp Image 2025-04-27 at 11.07.08 (1).webp" loading="lazy" alt="2023" class="rounded-xl shadow-lg transform rotate-2 w-full max-w-sm mx-auto" />
@@ -181,7 +183,7 @@
 						</div>
 					</div>
 					<!-- ITEM SEMESTER 7 -->
-					<div class="mb-20 flex flex-col md:flex-row items-center md:justify-between relative">
+					<div class="mb-20 flex flex-col md:flex-row items-center md:justify-between relative" data-aos="fade-up" data-aos-delay="400">
 						<!-- Konten (mobile kanan, desktop kiri) -->
 						<div class="md:w-5/12 md:text-right order-2 md:order-1 ml-10 md:ml-0">
 							<h3 class="text-xl font-bold mb-2 text-primary">Semester 7</h3>
@@ -260,7 +262,7 @@
 						<h3 class="text-sm font-medium">Ridho Firmansyah</h3>
 					</div>
 					<div class="flex flex-col items-center">
-						<img src="foto/WhatsApp Image 2025-08-01 at 20.25.1500.webp" loading="lazy" class="w-20 h-20 rounded-full object-cover mb-2 border" />
+						<img src="foto/WhatsApp Image 2025-08-03 at 10.32.02-removebg-preview.webp" loading="lazy" class="w-20 h-20 rounded-full object-cover mb-2 border" />
 						<h3 class="text-sm font-medium">Hesti Martianda</h3>
 					</div>
 					<div class="flex flex-col items-center">
@@ -545,6 +547,10 @@
 		</section>
 		<!-- Tombol Scroll to Top -->
 		<button id="scrollToTopBtn" onclick="window.scrollTo({top: 0, behavior: 'smooth'})" class="hidden fixed bottom-6 right-6 bg-primary text-white p-3 rounded-full shadow-md hover:bg-opacity-80 transition-all z-50">↑</button>
+		<script src="https://unpkg.com/aos@next/dist/aos.js"></script>
+		<script>
+			AOS.init();
+		</script>
 
 		<script src="script.js"></script>
 	</body>
