--- a/index.html
+++ b/index.html
@@ -27,11 +27,12 @@
 
 					<!-- Desktop Menu -->
 					<div id="menu" class="hidden md:flex space-x-6 text-sm font-medium text-white">
-						<a href="#hero" class="hover:text-opacity-80">Home</a>
-						<a href="#tentang" class="hover:text-opacity-80">Tentang</a>
-						<a href="#anggota" class="hover:text-opacity-80">Anggota</a>
-						<a href="#sosial" class="hover:text-opacity-80">Sosial Media</a>
-						<a href="galeri/galeri.html" class="hover:text-opacity-80">Galeri</a>
+						<a href="#hero" class="nav-link relative hover:text-opacity-80">Home</a>
+						<a href="#tentang" class="nav-link relative after:absolute after:bottom-0 after:left-0 after:h-[2px] after:transition-all after:duration-300 after:w-full">Tentang</a>
+
+						<a href="#anggota" class="nav-link relative after:absolute after:bottom-0 after:left-0 after:h-[2px] after:transition-all after:duration-300 after:w-full">Anggota</a>
+						<a href="#sosial" class="nav-link relative after:absolute after:bottom-0 after:left-0 after:h-[2px] after:transition-all after:duration-300 after:w-full">Sosial Media</a>
+						<a href="galeri/galeri.html" class="relative hover:text-opacity-80">Galeri</a>
 					</div>
 				</div>
 
@@ -45,8 +46,9 @@
 				</div>
 			</div>
 		</nav>
+
 		<!-- Hero Section -->
-		<div id="hero" class="relative min-h-screen overflow-hidden">
+		<section id="hero" class="relative min-h-screen overflow-hidden">
 			<div class="absolute inset-0 bg-cover bg-center blur-bg" style="background-image: url('img/NUSTEL.IN_33.webp')"></div>
 			<div class="hero-gradient relative inset-0 pt-16">
 				<div class="container mx-auto px-4 h-screen flex flex-col justify-center items-center text-white relative z-10">
@@ -61,7 +63,8 @@
 					</button>
 				</div>
 			</div>
-		</div>
+		</section>
+
 		<!-- Tentang Kelas -->
 		<section id="tentang" class="py-20 bg-gray-50 relative">
 			<div class="max-w-6xl mx-auto px-4">
@@ -210,7 +213,7 @@
 		</section>
 
 		<!-- Section Struktur Kelas -->
-		<section id="struktur" class="bg-gray-50 py-20 px-6">
+		<section id="struktur" class="bg-gray-50 py-20 px-6" data-aos="fade-up" data-aos-delay="400">
 			<div class="container mx-auto text-center">
 				<h2 class="text-4xl font-bold mb-12 text-primary">Struktur Organisasi Kelas</h2>
 
@@ -231,7 +234,7 @@
 						<p class="text-gray-500 text-sm">Sekretaris 1</p>
 					</div>
 					<div class="flex flex-col items-center">
-						<img src="img/sek2.webp" loading="lazy" class="w-20 h-20 rounded-full object-cover mb-2 border-2 border-gray-300" />
+						<img src="foto/WhatsApp Image 2025-08-03 at 12.30.13.webp" loading="lazy" class="w-20 h-20 rounded-full object-cover mb-2 border-2 border-gray-300" />
 						<h3 class="font-semibold text-sm">Baiq Raehul Aema Oktari</h3>
 						<p class="text-gray-500 text-sm">Sekretaris 2</p>
 					</div>
@@ -274,7 +277,7 @@
 			</div>
 		</section>
 		<!-- Section Anggota -->
-		<section id="anggota" class="min-h-screen bg-gray-50 py-20 px-6">
+		<section id="anggota" class="min-h-screen bg-gray-50 py-20 px-6" data-aos="fade-up" data-aos-delay="400">
 			<div class="container mx-auto">
 				<h2 class="text-4xl font-bold text-center mb-12 text-primary">Anggota Kelas</h2>
 				<div class="grid grid-cols-2 sm:grid-cols-2 md:grid-cols-2 lg:grid-cols-5 gap-6">
@@ -288,6 +291,8 @@
 					'https://link-ke-linkedin.com',
 					'https://readdy.ai/api/search-image?query=professional%20headshot%20of%20a%20young%20asian%20student%20wearing%20casual%20attire%2C%20natural%20lighting%2C%20clean%20background%2C%20high%20quality%2C%20photorealistic&width=400&height=400&seq=1&orientation=squarish'
 					)"
+						data-aos="fade-up"
+						data-aos-delay="400"
 					>
 						<div class="aspect-square rounded-xl overflow-hidden shadow-lg hover:shadow-xl transition-all">
 							<img
@@ -311,6 +316,8 @@
 					'https://link-ke-linkedin.com',
 					'https://readdy.ai/api/search-image?query=professional%20headshot%20of%20a%20young%20asian%20student%20wearing%20casual%20attire%2C%20natural%20lighting%2C%20clean%20background%2C%20high%20quality%2C%20photorealistic&width=400&height=400&seq=1&orientation=squarish'
 					)"
+						data-aos="fade-up"
+						data-aos-delay="400"
 					>
 						<div class="aspect-square rounded-xl overflow-hidden shadow-lg hover:shadow-xl transition-all">
 							<img
@@ -334,6 +341,8 @@
 					'https://link-ke-linkedin.com',
 					'https://readdy.ai/api/search-image?query=professional%20headshot%20of%20a%20young%20asian%20student%20wearing%20casual%20attire%2C%20natural%20lighting%2C%20clean%20background%2C%20high%20quality%2C%20photorealistic&width=400&height=400&seq=1&orientation=squarish'
 					)"
+						data-aos="fade-up"
+						data-aos-delay="400"
 					>
 						<div class="aspect-square rounded-xl overflow-hidden shadow-lg hover:shadow-xl transition-all">
 							<img
@@ -351,23 +360,20 @@
 					<div
 						class="group transition-transform hover:-translate-y-2 cursor-pointer"
 						onclick="openModal(
-					'Ahmad Rizki',
-					'Ketua kelas Teknik Komputer A yang aktif dan bertanggung jawab.',
-					'https:https://www.instagram.com/ridho_firmansyah19/',
+					'Baiq Raehul Aema Oktari',
+					'Si imutz kayak anak SMA',
+					'https://www.instagram.com/bq.rhl._.a.o?utm_source=ig_web_button_share_sheet&igsh=b3dheHNyb3BpY2E=',
 					'https://link-ke-linkedin.com',
-					'https://readdy.ai/api/search-image?query=professional%20headshot%20of%20a%20young%20asian%20student%20wearing%20casual%20attire%2C%20natural%20lighting%2C%20clean%20background%2C%20high%20quality%2C%20photorealistic&width=400&height=400&seq=1&orientation=squarish'
+					'foto/WhatsApp Image 2025-08-03 at 12.31.09 copy.webp'
 					)"
+						data-aos="fade-up"
+						data-aos-delay="400"
 					>
 						<div class="aspect-square rounded-xl overflow-hidden shadow-lg hover:shadow-xl transition-all">
-							<img
-								src="https://readdy.ai/api/search-image?query=professional%20headshot%20of%20a%20young%20asian%20female%20student%20wearing%20casual%20attire%2C%20natural%20lighting%2C%20clean%20background%2C%20high%20quality%2C%20photorealistic&width=400&height=400&seq=4&orientation=squarish"
-								loading="lazy"
-								alt="Anggota 4"
-								class="w-full h-full object-cover"
-							/>
+							<img src="foto/WhatsApp Image 2025-08-03 at 12.31.09.webp" loading="lazy" alt="Anggota 4" class="w-full h-full object-cover" />
 						</div>
 						<div class="mt-4 text-center">
-							<h3 class="font-semibold text-lg">Dewi Lestari</h3>
+							<h3 class="font-semibold text-lg">Baiq Raehul Aema Oktari</h3>
 						</div>
 					</div>
 					<!-- Anggota 5 -->
@@ -380,6 +386,8 @@
 					'https://link-ke-linkedin.com',
 					'foto/WhatsApp Image 2025-08-03 at 00.27.31 copy.webp'
 					)"
+						data-aos="fade-up"
+						data-aos-delay="400"
 					>
 						<div class="aspect-square rounded-xl overflow-hidden shadow-lg hover:shadow-xl transition-all">
 							<img src="foto/WhatsApp Image 2025-08-03 at 00.27.31.webp" loading="lazy" alt="Anggota 5" class="w-full h-full object-cover" />
@@ -398,6 +406,8 @@
 					'https://link-ke-linkedin.com',
 					'foto/IMG_20221202_113223 (1).webp'
 					)"
+						data-aos="fade-up"
+						data-aos-delay="400"
 					>
 						<div class="aspect-square rounded-xl overflow-hidden shadow-lg hover:shadow-xl transition-all">
 							<img src="foto/WhatsApp Image 2025-08-01 at 20.27.50.webp" loading="lazy" alt="Anggota 6" class="w-full h-full object-cover" />
@@ -416,6 +426,8 @@
 					'https://link-ke-linkedin.com',
 					'foto/WhatsApp Image 2025-08-02 at 17.22.28 copy.webp'
 					)"
+						data-aos="fade-up"
+						data-aos-delay="400"
 					>
 						<div class="aspect-square rounded-xl overflow-hidden shadow-lg hover:shadow-xl transition-all">
 							<img src="foto/WhatsApp Image 2025-08-02 at 17.22.28.webp" loading="lazy" alt="Anggota 7" class="w-full h-full object-cover" />
@@ -434,6 +446,8 @@
 					'https://link-ke-linkedin.com',
 					'foto/WhatsApp Image 2025-08-02 at 17.31.30 copy.webp'
 					)"
+						data-aos="fade-up"
+						data-aos-delay="400"
 					>
 						<div class="aspect-square rounded-xl overflow-hidden shadow-lg hover:shadow-xl transition-all">
 							<img src="foto/WhatsApp Image 2025-08-02 at 17.31.30.webp" loading="lazy" alt="Anggota 8" class="w-full h-full object-cover" />
@@ -452,6 +466,8 @@
 					'https://link-ke-linkedin.com',
 					'foto/WhatsApp Image 2025-08-03 at 07.13.24 copy.webp'
 					)"
+						data-aos="fade-up"
+						data-aos-delay="400"
 					>
 						<div class="aspect-square rounded-xl overflow-hidden shadow-lg hover:shadow-xl transition-all">
 							<img src="foto/WhatsApp Image 2025-08-03 at 07.13.24.webp" loading="lazy" alt="Anggota 8" class="w-full h-full object-cover" />
@@ -470,6 +486,8 @@
 					'https://link-ke-linkedin.com',
 					'foto/WhatsApp Image 2025-08-03 at 08.25.21 copy.webp'
 					)"
+						data-aos="fade-up"
+						data-aos-delay="400"
 					>
 						<div class="aspect-square rounded-xl overflow-hidden shadow-lg hover:shadow-xl transition-all">
 							<img src="foto/WhatsApp Image 2025-08-03 at 08.25.21.webp" loading="lazy" alt="Anggota 8" class="w-full h-full object-cover" />
@@ -488,6 +506,8 @@
 					'https://link-ke-linkedin.com',
 					'foto/WhatsApp Image 2025-08-03 at 09.07.22.webp'
 					)"
+						data-aos="fade-up"
+						data-aos-delay="400"
 					>
 						<div class="aspect-square rounded-xl overflow-hidden shadow-lg hover:shadow-xl transition-all">
 							<img src="foto/WhatsApp Image 2025-08-03 at 09.07.22.webp" loading="lazy" alt="Anggota 8" class="w-full h-full object-cover" />
@@ -506,6 +526,8 @@
 					'https://link-ke-linkedin.com',
 					'foto/WhatsApp Image 2025-08-03 at 09.15.38 (1).webp'
 					)"
+						data-aos="fade-up"
+						data-aos-delay="400"
 					>
 						<div class="aspect-square rounded-xl overflow-hidden shadow-lg hover:shadow-xl transition-all">
 							<img src="foto/WhatsApp Image 2025-08-03 at 09.15.38.webp" loading="lazy" alt="Anggota 8" class="w-full h-full object-cover" />
@@ -517,6 +539,7 @@
 				</div>
 			</div>
 		</section>
+
 		<!-- Modal Background -->
 		<!-- Modal -->
 		<!-- klik luar nutup -->
@@ -538,7 +561,7 @@
 				<h2 class="text-4xl font-bold mb-8">Sosial Media Kelas</h2>
 				<p class="text-lg mb-4">Yuk ikuti dan dukung aktivitas kami di media sosial!</p>
 				<div class="flex justify-center gap-6 text-3xl">
-					<a href="https://www.instagram.com/ridho_firmansyah19/" target="_blank" class="hover:text-gray-300"><i class="ri-instagram-line"></i></a>
+					<a href="https://www.instagram.com/tkdcomputerclass?utm_source=ig_web_button_share_sheet&igsh=MW92dmwyMnVjYmpsbQ==" target="_blank" class="hover:text-gray-300"><i class="ri-instagram-line"></i></a>
 					<a href="#" class="hover:text-gray-300"><i class="ri-facebook-line"></i></a>
 					<a href="#" class="hover:text-gray-300"><i class="ri-whatsapp-line"></i></a>
 				</div>
